# xpore

./: README.md  pyproject.toml
.github/workflows/: lint.yml  test.yaml
xpore/diffmod/: configurator.py  gmm.py  io.py  statstest.py
xpore/scripts/: dataprep.py  diffmod.py  helper.py  postprocessing.py  xpore.py
xpore/test/: test_diffmod.py
xpore/utils/: misc.py  stats.py
